--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
     </div>
 
     <script src="script.js"></script>
+ <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">   
 </body>
 </html>
